--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="styles.css" rel="stylesheet">
       <link rel="icon" type="image/x-icon" href="https://i.ibb.co/jfD0r9W/logo.png">
-      <title>sye.bio</title>
+      <title>qrexxed.me</title>
       <style>
    
         #overlay {
